--- a/style.css
+++ b/style.css
@@ -68,24 +68,6 @@ b { font-size: 30vh; }
   z-index: 110;
 }
 
-#counter, #food-area {
-  background: #1069fe;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 40vh;
-  border-top-left-radius: 20vw 6vw;
-  border-top-right-radius: 20vw 6vw;
-  z-index: 300;
-}
-
-#food-area {
-  background: #888;
-  height: 30vh;
-  z-index: 310;
-}
-
 #pumkin-area {
   position: fixed;
   z-index: 200;
@@ -103,6 +85,51 @@ b { font-size: 30vh; }
   }
 }
 
+#counter, #food-area {
+  background: #1069fe;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 40vh;
+  border-top-left-radius: 20vw 6vw;
+  border-top-right-radius: 20vw 6vw;
+  z-index: 300;
+}
+
+#food-area {
+  background: #888;
+  height: 30vh;
+  z-index: 310;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .pumkin {
   z-index: 210;
+}
+
+.food-container {
+  width: 14vh;
+  height: 14vh;
+  margin: 0 2vw;
+}
+.food {
+  font-size: 12vh;
+}
+@media (orientation: portrait){
+  .food-container {
+    width: 14vw;
+    height: 14vw;
+  }
+  .food {
+    font-size: 12vw;
+  }
+}
+
+.food-container > .food {
+  cursor: pointer;
 }
